--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Auto Post Hongkong Result
 
 on:
   schedule:
-    - cron: '0 16 * * *'  # Jam 23:00 WIB (16:00 UTC)
+    - cron: '0 * * * *'  # Setiap jam (UTC)
   workflow_dispatch:
 
 jobs:
