--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Auto Post Hongkong Result
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Setiap jam (UTC)
+    - cron: '5 * * * *'   # Setiap jam pada menit ke-5 (UTC)
   workflow_dispatch:
 
 jobs:
-  auto-post-hk:
+  auto-post-hongkong:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,8 +21,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+          pip install playwright
+          playwright install chromium
 
-      - name: Run HK result script
+      - name: Jalankan Script Hongkong
         env:
           WP_USER: ${{ secrets.WP_USER }}
           WP_PASS: ${{ secrets.WP_PASS }}
